--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-number-animator",
   "version": "1.0.1",
   "description": "A small component to animate a number increment/decrement with requestAnimationFrame",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
